// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Navbar > matches snapshot when collapsed 1`] = `
<div>
  <div
    class="navbar sticky top-0 z-50 bg-white"
  >
    <div
      aria-label="Expand dashboard"
      class="cursor-pointer select-none relative p-4 md:px-10 lg:px-24"
      role="button"
      tabindex="0"
    >
      <h2
        class="text-3xl font-bold text-left text-transparent bg-clip-text bg-gradient-to-r from-purple-500 via-pink-500 to-red-500 animate-pulse"
        style="display: inline-block;"
      >
        Dashboard
      </h2>
    </div>
    <div
      class="filters-wrapper filters-closed pl-4 pr-4 md:px-10 lg:px-24"
    >
      <div
        class="pb-2"
      >
        Child
        <div
          class="flex justify-center"
        >
          <button
            aria-label="Expand dashboard"
            class="text-sm flex items-center gap-1 cursor-pointer mt-4"
            type="button"
          >
            <span
              aria-hidden="true"
            >
              ▲
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Navbar > matches snapshot when expanded 1`] = `
<div>
  <div
    class="navbar sticky top-0 z-50 bg-white"
  >
    <div
      aria-label="Collapse dashboard"
      class="cursor-pointer select-none relative p-4 md:px-10 lg:px-24"
      role="button"
      tabindex="0"
    >
      <h2
        class="text-3xl font-bold text-left text-transparent bg-clip-text bg-gradient-to-r from-purple-500 via-pink-500 to-red-500 animate-pulse"
        style="display: inline-block;"
      >
        Dashboard
      </h2>
    </div>
    <div
      class="filters-wrapper filters-open pl-4 pr-4 md:px-10 lg:px-24"
    >
      <div
        class="pb-2"
      >
        Child
        <div
          class="flex justify-center"
        >
          <button
            aria-label="Expand dashboard"
            class="text-sm flex items-center gap-1 cursor-pointer mt-4"
            type="button"
          >
            <span
              aria-hidden="true"
            >
              ▲
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
